improved CSS fixing a few links, cleaning up design while prepping for a columnar layout to inprove readability

--- a/style/memoir.css
+++ b/style/memoir.css
@@ -6,6 +6,8 @@
 
 #tabs {
   float: none;
+  font-family: 'Open Sans', sans-serif;
+
 }
 
 .tab-btn {
